<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/mobile_navigation"
    app:startDestination="@+id/nav_node">

    <fragment
        android:id="@+id/nav_node"
        android:name="gatherer.lionellopez.discipleoftheland.ui.node.NodeFragment"
        android:label="@string/label_node"
        tools:layout="@layout/fragment_node" />

    <fragment
        android:id="@+id/nav_fishing"
        android:name="gatherer.lionellopez.discipleoftheland.ui.fishing.FishingFragment"
        android:label="@string/menu_fishing"
        tools:layout="@layout/fragment_fishing" />

    <fragment
        android:id="@+id/nav_weather"
        android:name="gatherer.lionellopez.discipleoftheland.ui.weather.WeatherFragment"
        android:label="@string/label_weather"
        tools:layout="@layout/fragment_weather" />
</navigation>